--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_form_materialDesign.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/layout/layout_form_materialDesign.html.twig
@@ -111,8 +111,8 @@
     {# cimo - #}
     {#<textarea {{ block('widget_attributes') }}>{{ value }}</textarea>#}
     {# cimo + #}
-    <div class="mdc-text-field mdc-text-field--textarea" {{ block('widget_attributes') }}>
-        <textarea id="textarea" class="mdc-text-field__input" rows="8" cols="40" autocomplete="off">{{ value }}</textarea>
+    <div class="mdc-text-field mdc-text-field--textarea">
+        <textarea class="mdc-text-field__input" {{ block('widget_attributes') }} rows="8" cols="40" autocomplete="off">{{ value }}</textarea>
         <label for="textarea" class="mdc-floating-label">{% if label is defined %}{{translation_domain is same as(false) ? label : label|trans({}, translation_domain)}}{% endif %}</label>
     </div>
 {%- endblock textarea_widget -%}
