--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_selection.html.twig
@@ -59,7 +59,7 @@
                 </tbody>
             </table>
         </div>
-        <button id="cp_page_selection_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button">{% trans %}index_12{% endtrans %}</button>
+        <button id="cp_page_selection_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>{% trans %}index_12{% endtrans %}</button>
     </div>
 
     <div id="cp_page_selection_mobile" class="display_mobile">
