--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_selection.html.twig
@@ -5,7 +5,7 @@
 <fieldset class="accordion_container">
     <legend>{% trans %}paymentSelection_1{% endtrans %}</legend>
     <p>{% trans %}paymentSelection_2{% endtrans %}</p>
-    <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_14{% endtrans %}</button>
+    <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button" disabled>{% trans %}index_14{% endtrans %}</button>
     <div class="accordion">
         <div id="cp_payment_selection_desktop" class="display_desktop">
             <div id="cp_payment_selection_result_desktop">
@@ -55,7 +55,7 @@
                     </tbody>
                 </table>
             </div>
-            <button id="cp_payment_selection_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button">{% trans %}index_12{% endtrans %}</button>
+            <button id="cp_payment_selection_button_desktop" class="mdc-button mdc-button--dense mdc-button--raised" type="button" disabled>{% trans %}index_12{% endtrans %}</button>
         </div>
 
         <div id="cp_payment_selection_mobile" class="display_mobile">
