--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_user_selection.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_user_selection.html.twig
@@ -4,7 +4,7 @@
     <fieldset class="accordion_container">
         <legend>{% trans %}paymentUserSelection_1{% endtrans %}</legend>
         <p>{% trans %}paymentUserSelection_2{% endtrans %}</p>
-        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_14{% endtrans %}</button>
+        <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button" disabled>{% trans %}index_14{% endtrans %}</button>
         <div class="accordion">
             {{form_row(form.userId, {'label': "paymentUserSelection_3"})}}
 
