--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -29,7 +29,7 @@
     <link href="{{asset("bundles/uebusaito/css/system/captcha.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/system/table_and_pagination.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/system/upload.css")}}" rel="stylesheet"/>
-    {#<link href="{{asset("bundles/uebusaito/css/system/wysiwyg.css")}}" rel="stylesheet"/>#}
+    <link href="{{asset("bundles/uebusaito/css/system/wysiwyg.css")}}" rel="stylesheet"/>
     <link href="{{asset("bundles/uebusaito/css/system/widget.css")}}" rel="stylesheet"/>
 {% endblock%}
 
@@ -273,7 +273,7 @@
     <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/Upload.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/PopupEasy.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/Language.js")}}"></script>
-    {#<script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/Wysiwyg.js")}}"></script>#}
+    <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/Wysiwyg.js")}}"></script>
     {#<script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/PageComment.js")}}"></script>#}
     <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/MaterialDesign.js")}}"></script>
     <script type="text/javascript" src="{{asset("bundles/uebusaito/javascript/system/WidgetSearch.js")}}"></script>
