--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
@@ -1,205 +1,124 @@
 <div id="wysiwyg">
     <div class="toolbar">
-        <i class="fa fa-code" data-command="source"></i>
-        <i class="fa fa-undo" data-command="undo"></i>
-        <i class="fa fa-repeat" data-command="redo"></i>
-        <i class="fa fa-eraser" data-command="remove_attribute"></i>
-        <div>
-            <i class="fa fa-commenting-o"></i><input data-command="foreColor" type="color"/>
-            <i class="fa fa-commenting"></i><input data-command="hiliteColor" type="color"/>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Source">
+            <span class="mdc-fab__icon material-icons" data-command="source">code</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Undo">
+            <span class="mdc-fab__icon material-icons" data-command="undo">undo</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Redo">
+            <span class="mdc-fab__icon material-icons" data-command="redo">redo</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Remove format">
+            <span class="mdc-fab__icon material-icons" data-command="removeFormat">delete_sweep</span>
+        </button>
+        <div class="container_icon">
+            <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Fore color">
+                <span class="mdc-fab__icon material-icons" data-command="foreColor">format_color_text</span>
+            </button>
+            <input type="color"/>
+            <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Back color">
+                <span class="mdc-fab__icon material-icons" data-command="backColor">format_color_fill</span>
+            </button>
+            <input type="color"/>
         </div>
-        <select data-command="formatBlock">
-            <option value="">{{"wysiwyg_18"|trans}}</option>
-            <option value="p">P</option>
-            <option value="h1">H1</option>
-            <option value="h2">H2</option>
-            <option value="h3">H3</option>
-            <option value="h4">H4</option>
-            <option value="h5">H5</option>
-            <option value="h6">H6</option>
-        </select>
-        <select data-command="fontSize">
-            <option value="">{{"wysiwyg_19"|trans}}</option>
-            <option value="1">Size 1</option>
-            <option value="2">Size 2</option>
-            <option value="3">Size 3</option>
-            <option value="4">Size 4</option>
-            <option value="5">Size 5</option>
-            <option value="6">Size 6</option>
-            <option value="7">Size 7</option>
-        </select>
-        <i class="fa fa-bold" data-command="bold"></i>
-        <i class="fa fa-italic" data-command="italic"></i>
-        <i class="fa fa-underline" data-command="underline"></i>
-        <i class="fa fa-strikethrough" data-command="strikeThrough"></i>
-        <i class="fa fa-align-left" data-command="justifyLeft"></i>
-        <i class="fa fa-align-center" data-command="justifyCenter"></i>
-        <i class="fa fa-align-right" data-command="justifyRight"></i>
-        <i class="fa fa-align-justify" data-command="justifyFull"></i>
-        <i class="fa fa-indent" data-command="indent"></i>
-        <i class="fa fa-outdent" data-command="outdent"></i>
-        <i class="fa fa-list-ul" data-command="insertUnorderedList"></i>
-        <i class="fa fa-list-ol" data-command="insertOrderedList"></i>
-        <i class="fa fa-subscript" data-command="subscript"></i>
-        <i class="fa fa-superscript" data-command="superscript"></i>
-        <i class="fa fa-link" data-command="createlink"></i>
-        <i class="fa fa-image" data-command="insertimage"></i>
-        <i class="fa fa-square" data-command="button"></i>
-        <i class="fa fa-table" data-command="table_html"></i>
-        <i class="fa fa-square-o" data-command="table_div"></i>
-        <div class="popup_settings">
-            <div class="only_link">
-                <p><b>{{"wysiwyg_20"|trans}}</b></p>
-                <div class="position">
-                    <i class="fa fa-trash" data-command="link_remove"></i>
-                </div>
-                <div class="attribute">
-                    <div class="field_container">
-                        <p>{{"wysiwyg_2"|trans}}</p>
-                        <input name="link_href" value=""/>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_3"|trans}}</p>
-                        <input name="link_text" value=""/>
-                    </div>
-                </div>
-                <a class="button_custom" href="javascript:void(0)" data-command="link_ok">{{"wysiwyg_34"|trans}}</a>
-            </div>
-            <div class="only_image">
-                <p><b>{{"wysiwyg_21"|trans}}</b></p>
-                <div class="position">
-                    <i class="fa fa-trash" data-command="image_remove"></i>
-                </div>
-                <div class="attribute">
-                    <p>{{"wysiwyg_5"|trans}}</p>
-                    <input name="image_src" value=""/>
-                </div>
-                <div class="size">
-                    <div class="field_container">
-                        <p class="display_inline_block">{{"wysiwyg_6"|trans}}</p>
-                        <input class="display_inline_block" name="image_responsive" type="checkbox" value=""/>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_7"|trans}}</p>
-                        <input name="image_width" value=""/>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_8"|trans}}</p>
-                        <input name="image_height" value=""/>
-                    </div>
-                </div>
-                <a class="button_custom" href="javascript:void(0)" data-command="image_ok">{{"wysiwyg_34"|trans}}</a>
-            </div>
-            <div class="only_button">
-                <p><b>{{"wysiwyg_22"|trans}}</b></p>
-                <div class="position">
-                    <i class="fa fa-trash" data-command="button_remove"></i>
-                </div>
-                <div class="attribute">
-                    <div class="field_container">
-                        <p>{{"wysiwyg_10"|trans}}</p>
-                        <textarea class="display_block" name="button_style"></textarea>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_11"|trans}}</p>
-                        <input name="button_class" value=""/>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_12"|trans}}</p>
-                        <input name="button_href" value=""/>
-                    </div>
-                    <div class="field_container">
-                        <p>{{"wysiwyg_13"|trans}}</p>
-                        <input name="button_text" value=""/>
-                    </div>
-                </div>
-                <a class="button_custom" href="javascript:void(0)" data-command="button_ok">{{"wysiwyg_34"|trans}}</a>
-            </div>
-            <div class="only_table">
-                <p><b>{{"wysiwyg_23"|trans}}</b></p>
-                <div class="position">
-                    <i class="fa fa-align-left only_table_html" data-command="table_justify_left"></i>
-                    <i class="fa fa-align-center only_table_html" data-command="table_justify_center"></i>
-                    <i class="fa fa-align-right only_table_html" data-command="table_justify_right"></i>
-                    <i class="fa fa-trash" data-command="table_remove"></i>
-                </div>
-                <div class="attribute">
-                    <fieldset>
-                        <legend>{{"wysiwyg_17"|trans}}</legend>
-                        <input name="table_width" value=""/>
-                        <i class="fa fa-table" data-command="table_width"></i>
-                        <i class="fa fa-columns" data-command="column_width"></i>
-                    </fieldset>
-                    <div class="only_table_div">
-                        <fieldset>
-                            <legend>{{"wysiwyg_24"|trans}}</legend>
-                            <input name="table_margin" value=""/>
-                            <i class="fa fa-table" data-command="table_margin"></i>
-                        </fieldset>
-                    </div>
-                    <fieldset>
-                        <legend>{{"wysiwyg_25"|trans}}</legend>
-                        <div>
-                            <p class="display_inline_block">{{"wysiwyg_26"|trans}}</p>
-                            <input class="display_inline_block" name="table_padding_desktop" type="checkbox" value=""/>
-                            <p class="display_inline_block">{{"wysiwyg_27"|trans}}</p>
-                            <input class="display_inline_block" name="table_padding_mobile" type="checkbox" value=""/>
-                        </div>
-                        <input name="table_padding" value=""/>
-                        <i class="fa fa-columns" data-command="table_padding"></i>
-                    </fieldset>
-                </div>
-                <div class="offset only_table_div">
-                    <fieldset>
-                        <legend>{{"wysiwyg_28"|trans}}</legend>
-                        <input name="table_offset" value=""/>
-                        <i class="fa fa-align-center" data-command="table_offset"></i>
-                    </fieldset>
-                </div>
-                <div class="color">
-                    <fieldset>
-                        <legend>{{"wysiwyg_29"|trans}}</legend>
-                        <input type="color"/>
-                        <i class="fa fa-table" data-command="table_color"></i>
-                        <i class="fa fa-columns" data-command="column_color"></i>
-                    </fieldset>
-                </div>
-                <div class="layout">
-                    <div>
-                        <fieldset>
-                            <legend>{{"wysiwyg_30"|trans}}</legend>
-                            <i class="fa fa-plus" data-command="table_add_row"></i>
-                            <i class="fa fa-minus" data-command="table_remove_row"></i>
-                            <i class="fa fa-ellipsis-h only_table_div" data-command="table_merge_column_b"></i>
-                        </fieldset>
-                    </div>
-                    <div>
-                        <fieldset>
-                            <legend>{{"wysiwyg_31"|trans}}</legend>
-                            <i class="fa fa-plus" data-command="table_add_column"></i>
-                            <i class="fa fa-minus" data-command="table_remove_column"></i>
-                        </fieldset>
-                    </div>
-                </div>
-                <div class="colspan only_table_html">
-                    <div>
-                        <fieldset>
-                            <legend>{{"wysiwyg_32"|trans}}</legend>
-                            <input class="display_inline_block" name="table_rowspan" value=""/>
-                            <i class="fa fa-ellipsis-h" data-command="table_merge_column_a"></i>
-                        </fieldset>
-                    </div>
-                    <div>
-                        <fieldset>
-                            <legend>{{"wysiwyg_33"|trans}}</legend>
-                            <input class="display_inline_block" name="table_colspan" value=""/>
-                            <i style="padding-left: 9px; padding-right: 9px;" class="fa fa-ellipsis-v" data-command="table_merge_column_b"></i>
-                        </fieldset>
-                    </div>
-                </div>
-            </div>
+        <div class="mdc-select" style="width: 120px;">
+            <select class="mdc-select__native-control" data-command="formatBlock">
+                <option value=""></option>
+                <option value="p">P</option>
+                <option value="h1">H1</option>
+                <option value="h2">H2</option>
+                <option value="h3">H3</option>
+                <option value="h4">H4</option>
+                <option value="h5">H5</option>
+                <option value="h6">H6</option>
+            </select>
+            <label class="mdc-floating-label mdc-floating-label--float-above">{{"wysiwyg_1"|trans}}</label>
+            <div class="mdc-line-ripple"></div>
         </div>
+        <div class="mdc-select" style="width: 120px;">
+            <select class="mdc-select__native-control" data-command="fontSize">
+                <option value=""></option>
+                <option value="1">Size 1</option>
+                <option value="2">Size 2</option>
+                <option value="3">Size 3</option>
+                <option value="4">Size 4</option>
+                <option value="5">Size 5</option>
+                <option value="6">Size 6</option>
+                <option value="7">Size 7</option>
+            </select>
+            <label class="mdc-floating-label mdc-floating-label--float-above">{{"wysiwyg_2"|trans}}</label>
+            <div class="mdc-line-ripple"></div>
+        </div>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Bold">
+            <span class="mdc-fab__icon material-icons" data-command="bold">format_bold</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Italic">
+            <span class="mdc-fab__icon material-icons" data-command="italic">format_italic</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Underline">
+            <span class="mdc-fab__icon material-icons" data-command="underline">format_underline</span>
+        </button>
+        <br>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Justify left">
+            <span class="mdc-fab__icon material-icons" data-command="justifyLeft">format_align_left</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Justify center">
+            <span class="mdc-fab__icon material-icons" data-command="justifyCenter">format_align_center</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Justify right">
+            <span class="mdc-fab__icon material-icons" data-command="justifyRight">format_align_right</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Justify full">
+            <span class="mdc-fab__icon material-icons" data-command="justifyFull">format_align_justify</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Indent">
+            <span class="mdc-fab__icon material-icons" data-command="indent">format_indent_increase</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Outdent">
+            <span class="mdc-fab__icon material-icons" data-command="outdent">format_indent_decrease</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Unordered list">
+            <span class="mdc-fab__icon material-icons" data-command="insertUnorderedList">format_list_bulleted</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Order list">
+            <span class="mdc-fab__icon material-icons" data-command="insertOrderedList">format_list_numbered</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Create link">
+            <span class="mdc-fab__icon material-icons" data-command="createLink">insert_link</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Remove link">
+            <span class="mdc-fab__icon material-icons" data-command="unlink">link_off</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="Insert image">
+            <span class="mdc-fab__icon material-icons" data-command="insertImage">insert_photo</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="">
+            <span class="mdc-fab__icon material-icons" data-command="custom_button_add">add_box</span>
+        </button>
+        <button class="mdc-fab mdc-fab--mini cp_page_deletion" type="button" aria-label="">
+            <span class="mdc-fab__icon material-icons" data-command="custom_table_add">border_all</span>
+        </button>
     </div>
     <iframe class="editor" src="about:blank"></iframe>
     <div class="source" contenteditable="true"></div>
 </div>
+<script type="text/javascript">
+    var textWysiwyg = {
+        'label_1': "{{"wysiwyg_1"|trans}}",
+        'label_2': "{{"wysiwyg_2"|trans}}",
+        'label_3': "{{"wysiwyg_3"|trans}}",
+        'label_4': "{{"wysiwyg_4"|trans}}",
+        'label_5': "{{"wysiwyg_5"|trans}}",
+        'label_6': "{{"wysiwyg_6"|trans}}",
+        'label_7': "{{"wysiwyg_7"|trans}}",
+        'label_8': "{{"wysiwyg_8"|trans}}",
+        'label_9': "{{"wysiwyg_9"|trans}}",
+        'label_10': "{{"wysiwyg_10"|trans}}",
+        'label_11': "{{"wysiwyg_11"|trans}}",
+        'label_12': "{{"wysiwyg_12"|trans}}",
+        'label_13': "{{"wysiwyg_13"|trans}}",
+        'label_14': "{{"wysiwyg_14"|trans}}",
+        'label_15': "{{"wysiwyg_15"|trans}}"
+    };
+</script>
