--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_creation.html.twig
@@ -10,7 +10,7 @@
         {{form_row(form.controllerAction, {'label': "pageCreation_5", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.argument, {'label': "pageCreation_6", 'dense': "", 'styleType': "outlinedTrailing"})}}
 
-        {#{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}#}
+        {{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}}
 
         <div id="page_roleUserId" class="wordTag_container">
             <div class="wordTag_result"></div>
@@ -20,7 +20,8 @@
 
         {{form_row(form.protected, {'label': "pageCreation_8", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.showInMenu, {'label': "pageCreation_9", 'dense': "", 'styleType': "outlinedTrailing"})}}
-
+        {{form_row(form.menuName, {'label': "pageCreation_11", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
+        
         <div id="page_menuSort" class="sort_container">
             <p>{% trans %}pageCreation_10{% endtrans %} <i class="material-icons">list</i></p>
             <div class="sort_result">
@@ -39,7 +40,6 @@
             {{form_row(form.menuSort)}}
         </div>
         
-        {{form_row(form.menuName, {'label': "pageCreation_11", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
         {{form_row(form.comment, {'label': "pageCreation_12", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.onlyLink, {'label': "pageCreation_13", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.link, {'label': "pageCreation_14", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
