--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/page_profile.html.twig
@@ -20,7 +20,7 @@
         {{form_row(form.controllerAction, {'label': "pageProfile_6", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.argument, {'label': "pageProfile_7", 'dense': "", 'styleType': "outlinedTrailing"})}}
         
-        {#{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}#}
+        {{-include("@UebusaitoBundleViews/include/wysiwyg.html.twig")-}}
         
         <div id="page_roleUserId" class="wordTag_container">
             <div class="wordTag_result"></div>
@@ -30,7 +30,8 @@
         
         {{form_row(form.protected, {'label': "pageProfile_9", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.showInMenu, {'label': "pageProfile_10", 'dense': "", 'styleType': "outlinedTrailing"})}}
-
+        {{form_row(form.menuName, {'label': "pageProfile_12", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
+        
         <div id="page_menuSort" class="sort_container">
             <p>{% trans %}pageProfile_11{% endtrans %} <i class="material-icons">list</i></p>
             <div class="sort_result">
@@ -49,14 +50,13 @@
             {{form_row(form.menuSort)}}
         </div>
         
-        {{form_row(form.menuName, {'label': "pageProfile_12", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "menu"})}}
         {{form_row(form.comment, {'label': "pageProfile_13", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.onlyLink, {'label': "pageProfile_14", 'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.link, {'label': "pageProfile_15", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "link"})}}
 
         {{form_widget(form._token)}}
 
-        {{form_widget(form.submit, {'label': "index_9", 'dense': "", 'raised': ""})}}
+        {{form_widget(form.submit, {'label': "index_11", 'dense': "", 'raised': ""})}}
     </form>
 
     {% if is_granted("ROLE_ADMIN") == true and response.values.id > 5 %}
