--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_deletion.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/payment_deletion.html.twig
@@ -1,2 +1,2 @@
 <p>{% trans %}paymentDeletion_1{% endtrans %}</p>
-<button id="cp_payment_deletion" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}index_10{% endtrans %}</button>
+<button id="cp_payment_deletion" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button" disabled>{% trans %}index_10{% endtrans %}</button>
