--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel/profile_password.html.twig
@@ -3,7 +3,7 @@
 <fieldset class="accordion_container">
     <legend>{% trans %}profilePassword_1{% endtrans %}</legend>
     <p>{% trans %}profilePassword_2{% endtrans %}</p>
-    <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_14{% endtrans %}</button>
+    <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button" disabled>{% trans %}index_14{% endtrans %}</button>
     <div class="accordion">
         <form id="form_cp_profile_password" action="{{path("cp_profile_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.old, {'label': "profilePassword_3", 'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
