--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/basic.scss
@@ -1305,7 +1305,11 @@ table {
     }
 
     .accordion {
-        display: none;
+        height: 0;
+        overflow: hidden;
+    }
+    .accordion_active {
+        height: auto;
     }
 }
 
