--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/control_panel.html.twig
@@ -135,9 +135,7 @@
     {% endif %}
 {% endif %}
 <script type="text/javascript">
-    document.addEventListener("DOMContentLoaded", function() {
-        utility.accordion("button");
-        
+    window.onload = function() {
         controlPanelProfile.init();
         
         controlPanelPayment.init();
@@ -150,7 +148,7 @@
             controlPanelPayment.changeView();
             controlPanelPage.changeView();
         };
-    });
+    };
     
     var textPayment = {
         'label_1': "{{"controlPanel_15"|trans}}",
