--- a/symfony_fw/templates/render/module/authentication.html.twig
+++ b/symfony_fw/templates/render/module/authentication.html.twig
@@ -33,7 +33,7 @@
     {% else %}
         {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
 
-        <form id="form_authentication" class="form_user_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_authentication" action="{{path("authentication_enter_check", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form._username, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "pets"})}}
             {{form_row(form._password, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "linear_scale"})}}
             
