--- a/symfony_fw/templates/render/module/language_text.html.twig
+++ b/symfony_fw/templates/render/module/language_text.html.twig
@@ -1,7 +1,12 @@
-<a href="javascript:void(0)" class="material-icons mdc-top-app-bar__action-item" aria-label="Language" alt="Language">language</a>
-{#img id="language_flag_{{app.request.getLocale()}}" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ app.request.getLocale() ~ ".png")}}" alt="{{app.request.getLocale()}}.png"/>
-<form id="form_language_text" action="{{path("language_text", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-    {{form_row(form.codeText, {'label': false})}}
-
-    {{form_widget(form._token)}}
-</form>#}
+<div id="language_text_container" class="mdc-menu-anchor">
+    <a href="javascript:void(0)" class="material-icons mdc-top-app-bar__action-item" aria-label="Language" alt="Language">language</a>
+    <div class="mdc-menu" tabindex="-1">
+        <ul class="mdc-menu__items mdc-list" role="menu" aria-hidden="true">
+            {% for value in response.values.languageRows %}
+                <li class="mdc-list-item" role="menuitem" {% if value.code == app.request.getLocale() %}tabindex="-1" aria-disabled="true"{% endif %}>
+                    <span><img class="{{value.code}}" src="{{asset("images/templates/" ~ settingRow['template'] ~ "/lang/" ~ value.code ~ ".png")}}" alt="{{value.code}}.png"/>{{value.code}}</span>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
